@@ -1,19 +1,4 @@
-FROM amazoncorretto:17.0.3-alpine as corretto-jdk
-RUN apk add --no-cache binutils
-RUN ${JAVA_HOME}/bin/jlink \
-    --verbose \
-    --add-modules ALL-MODULE-PATH \
-    --strip-debug \
-    --no-man-pages \
-    --no-header-files \
-    --compress=2 \
-    --output /customjre
-
-
-FROM alpine:latest
-ENV JAVA_HOME=/jre
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-COPY --from=corretto-jdk /customjre $JAVA_HOME
+FROM yulquen/cande-builder:latest
 ARG SERVICE_NAME
 ENV SERVICE_NAME=${SERVICE_NAME}
 ARG EUREKA_URI 
